objects/AR_Demo1__c.object
<CustomObject>
    <description>AR Demo</description>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Text Field1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Field__c</fullName>
        <label>Number Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PickList_Field2__c</fullName>
        <label>PickList Field2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PV21</fullName>
                </value>
                <value>
                    <fullName>PV22</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Field1__c</fullName>
        <label>Picklist Field1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PV1</fullName>
                </value>
                <value>
                    <fullName>PV2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Field2__c</fullName>
        <description>Text_Field2</description>
        <label>Text Field2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AR Demo</label>
    <nameField>
        <label>AR Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARDemo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>